// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

function foo(x: number) {}
foo.x = 1;
module.exports = foo;

=====================================output=====================================
// @flow

function foo(x: number) {}
foo.x = 1;
module.exports = foo;

================================================================================
`;

exports[`b.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

import foo from './a';
foo.call(undefined, "");

=====================================output=====================================
// @flow

import foo from "./a";
foo.call(undefined, "");

================================================================================
`;
